--- a/package.json
+++ b/package.json
@@ -3,18 +3,44 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^20.0.8",
-    "@types/node": "^8.0.25",
-    "@types/react": "^16.0.5",
-    "@types/react-dom": "^15.5.4",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts-ts": "2.6.0"
+    "react-redux": "^5.0.6",
+    "react-router-redux": "next",
+    "react-scripts-ts": "2.6.0",
+    "recompose": "^0.25.0",
+    "redux": "^3.7.2",
+    "reselect": "^3.0.1",
+    "styled-components": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "lint-staged": "lint-staged",
+    "tslint": "tslint -c tslint.json src/**/*.tsx src/**/*.ts"
+  },
+  "devDependencies": {
+    "@types/jest": "^20.0.8",
+    "@types/lodash": "^4.14.74",
+    "@types/node": "^8.0.25",
+    "@types/react": "^16.0.5",
+    "@types/react-dom": "^15.5.4",
+    "@types/react-redux": "^5.0.5",
+    "@types/react-router-redux": "^5.0.7",
+    "tslint-config-prettier": "^1.3.0"
+  },
+  "pre-commit": [
+    "lint-staged"
+  ],
+  "lint-staged": {
+    "*.js": [
+      "prettier --trailing-comma es5 --single-quote --parser flow --write",
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
