--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,13 +9,18 @@
     "jsx": "react",
     "moduleResolution": "node",
     "rootDir": "src",
+    "strict": true,
+    "alwaysStrict": true,
+    "noFallthroughCasesInSwitch": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true
+    "noUnusedLocals": true,
+    "baseUrl": "src",
+    "typeRoots": ["node_modules/@types", "types"]
   },
   "exclude": [
     "node_modules",
