--- a/package.json
+++ b/package.json
@@ -3,15 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "fp-ts": "^0.4.6",
+    "history": "^4.7.2",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
+    "monocle-ts": "^0.3.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "react-router-redux": "next",
     "react-scripts-ts": "2.6.0",
     "recompose": "^0.25.0",
     "redux": "^3.7.2",
+    "redux-devtools": "^3.4.0",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-devtools-log-monitor": "^1.3.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^4.9.1",
+    "redux-slider-monitor": "^2.0.0-1",
+    "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "styled-components": "^2.1.2"
   },
@@ -30,7 +42,12 @@
     "@types/react": "^16.0.5",
     "@types/react-dom": "^15.5.4",
     "@types/react-redux": "^5.0.5",
+    "@types/react-router-dom": "^4.0.7",
     "@types/react-router-redux": "^5.0.7",
+    "@types/redux-devtools": "^3.0.38",
+    "@types/redux-devtools-dock-monitor": "^1.1.31",
+    "@types/redux-devtools-log-monitor": "^1.0.32",
+    "@types/redux-logger": "^3.0.1",
     "tslint-config-prettier": "^1.3.0"
   },
   "pre-commit": [
