--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "recompose": "^0.25.0",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.0",
+    "redux-devtools-chart-monitor": "^1.6.1",
+    "redux-devtools-dispatch": "^2.2.1",
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-extension": "^2.13.2",
+    "redux-devtools-filter-actions": "^1.2.2",
+    "redux-devtools-inspector": "^0.11.3",
     "redux-devtools-log-monitor": "^1.3.0",
+    "redux-devtools-multiple-monitors": "^1.0.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^4.9.1",
     "redux-slider-monitor": "^2.0.0-1",
@@ -28,8 +33,8 @@
     "styled-components": "^2.1.2"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
+    "start": "NODE_PATH=src NODE_ENV=development react-scripts-ts start",
+    "build": "NODE_PATH=src react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
     "lint-staged": "lint-staged",
