--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "alwaysStrict": true,
 
 
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
