--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
+    "react-redux-firebase": "^1.4.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "next",
     "react-scripts-ts": "2.6.0",
